# jh-rocket-fs

./: Cargo.toml
src/: main.rs
static/: index.html
static/public/: index.html
static/templates/: button.html.hbs
templates/public/subdir/: index.html
templates/templates/: index.html.hbs  layout.html.hbs  no_button.html.hbs
templates/templates/error/: 404.html.hbs
