[package]
name = "jh-rocket-fs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shuttle-runtime = "0.14.0"
rocket = "0.5.0-rc.2"
shuttle-rocket = "0.14.0"
tokio = "1.26.0"
shuttle-static-folder = "0.14.0"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }